--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,10 @@
         <div>
             Microblog:
 			<a href="{{ url_for('routes.index') }}">Home</a>
+			{% if current_user.is_anonymous %}
 			<a href="{{ url_for('routes.login') }}">Login</a>
+			{% else %}
+			<a href="{{ url_for('routes.logout') }}">Logout</a>
         </div>
         <hr>
 		{% with messages = get_flashed_messages() %}
