--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
 			<a href="{{ url_for('routes.login') }}">Login</a>
 			{% else %}
 			<a href="{{ url_for('routes.logout') }}">Logout</a>
+			{% endif %}
         </div>
         <hr>
 		{% with messages = get_flashed_messages() %}
