--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,10 @@
 			{% if current_user.is_anonymous %}
 			<a href="{{ url_for('routes.login') }}">Login</a>
 			{% else %}
+			<a href="{{ url_for('routes.user',
+				username=current_user.username) }}">
+				Profile
+			</a>
 			<a href="{{ url_for('routes.logout') }}">Logout</a>
 			{% endif %}
         </div>
