--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -12,11 +12,38 @@
 				{% if user.last_seen %}
 					<p>Last seen on: {{ user.last_seen }}</p>
 				{% endif %}
+				<p>
+					{{ user.followers_count() }} folowers, 
+					{{ user.following_count() }} following.
+				</p>	
+
 				{% if user == current_user %}
 					<p>
 						<a href="{{ url_for('routes.edit_profile') }}">
 							Edit your profile
 						</a>
+					</p>
+				{% elif not current_user.is_following(user) %}
+					<p>
+						<form action="{{ url_for(
+									  'routes.follow',
+									  username=user.username
+							  ) }}"
+							  method="post">
+							{{ form.hidden_tag() }}
+							{{ form.submit(value='Follow') }}
+						</form>
+					</p>
+				{% else %}
+					<p>
+						<form action="{{ url_for(
+									  'routes.unfollow',
+									  username=user.username
+							  ) }}"
+							  method="post">
+							{{ form.hidden_tag() }}
+							{{ form.submit(value='Unfollow') }}
+						</form>
 					</p>
 				{% endif %}
 			</td>
