Added user avatars for comments, an 'explore' page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
 			</a>
 			<a href="{{ url_for('routes.logout') }}">Logout</a>
 			{% endif %}
+			<a href="{{ url_for('routes.explore') }}">Explore</a>
         </div>
         <hr>
 		{% with messages = get_flashed_messages() %}
