--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,4 +27,10 @@
 			Click to register!
 		</a>
 	</p>
+	<p>
+        Forgot Your Password?
+        <a href="{{ url_for('routes.reset_password_request') }}">
+			Click to Reset It
+		</a>
+    </p>
 {% endblock %}
