--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<table>
-		<tr valign="top">
-			<td><img src="{{ user.avatar(128) }}"></td>
+	<table class"table table-hover">
+		<tr>
+			<td withd="256px"><img src="{{ user.avatar(256) }}"></td>
 			<td>
 				<h1>User: {{ user.username }}</h1>
 				{% if user.about_me%}
@@ -13,7 +13,7 @@
 					<p>Last seen on: {{ user.last_seen }}</p>
 				{% endif %}
 				<p>
-					{{ user.followers_count() }} folowers, 
+					{{ user.followers_count() }} followers, 
 					{{ user.following_count() }} following.
 				</p>	
 
@@ -31,7 +31,7 @@
 							  ) }}"
 							  method="post">
 							{{ form.hidden_tag() }}
-							{{ form.submit(value='Follow') }}
+							{{ form.submit(value='Follow', class_='btn btn-primary') }}
 						</form>
 					</p>
 				{% else %}
@@ -42,23 +42,31 @@
 							  ) }}"
 							  method="post">
 							{{ form.hidden_tag() }}
-							{{ form.submit(value='Unfollow') }}
+							{{ form.submit(value='Unfollow', class_='btn btn-primary') }}
 						</form>
 					</p>
 				{% endif %}
 			</td>
 		</tr>
 	</table>
-	<hr>
 	{% for post in posts %}
 		<!-- We include a sub-template for posts with Jinja -->
 		{% include "_post.html" %}
 	{% endfor %}
 	<!-- Added navigation links -->
-	{% if prev_url %}
-	    <a href="{{ prev_url }}">Newer posts</a>
-    {% endif %}
-    {% if next_url %}
-		<a href="{{ next_url }}">Older posts</a>
-    {% endif %}
+	    <nav aria-label="Post navigation">
+        <ul class="pagination">
+            <li class="page-item{% if not prev_url %} disabled{% endif %}">
+                <a class="page-link" href="{{ prev_url }}">
+                    <span aria-hidden="true">&larr;</span> Newer posts
+                </a>
+            </li>
+            <li class="page-item{% if not next_url %} disabled{% endif %}">
+                <a class="page-link" href="{{ next_url }}">
+                    Older posts <span aria-hidden="true">&rarr;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
 {% endblock %}
