--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -10,7 +10,7 @@
                 <a href="{{ url_for('routes.user', username=post.author.username) }}">
                     {{ post.author.username }}
                 </a>
-                says:
+			said {{ moment(post.timestamp).fromNow() }}:
                 <br>
                 {{ post.body }}
             </td>
