--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,5 +62,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous">
     </script>
+	<!-- Include moment.js in the base template -->
+	{{ moment.include_moment() }}
   </body>
 </html>
