--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,6 +2,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1>File not Found</h1>
-	<p><a href="{{ url_for('routes.index') }}">Back</a></p>
+	<h1>{{_('Not Found') }}</h1>
+	<p><a href="{{ url_for('routes.index') }}">{{ _('Back') }}</a></p>
 {% endblock %}
