--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     {% if title %}
     <title>{{ title }} - Microblog</title>
     {% else %}
-    <title>Welcome to Microblog</title>
+	<title>{{ _('Welcome to Microblog') }}</title>
     {% endif %}
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -24,23 +24,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('routes.index') }}">Home</a>
+				<a class="nav-link" aria-current="page" href="{{ url_for('routes.index') }}">{{ _('Home') }}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('routes.explore') }}">Explore</a>
+				<a class="nav-link" aria-current="page" href="{{ url_for('routes.explore') }}">{{ _('Explore') }}</a>
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0">
             {% if current_user.is_anonymous %}
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('routes.login') }}">Login</a>
+				<a class="nav-link" aria-current="page" href="{{ url_for('routes.login') }}">{{ _('Login') }}</a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('routes.user', username=current_user.username) }}">Profile</a>
+				<a class="nav-link" aria-current="page" href="{{ url_for('routes.user', username=current_user.username) }}">{{ _('Profile') }}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('routes.logout') }}">Logout</a>
+				<a class="nav-link" aria-current="page" href="{{ url_for('routes.logout') }}">{{ _('Logout') }}</a>
             </li>
             {% endif %}
           </ul>
@@ -64,5 +64,6 @@
     </script>
 	<!-- Include moment.js in the base template -->
 	{{ moment.include_moment() }}
+	{{ moment.lang(g.locale) }}
   </body>
 </html>
