--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -19,3 +19,7 @@
             </td>
         </tr>
     </table>
+{% if post.language and post.language != g.locale %}
+                <br><br>
+                <a href="#">{{ _('Translate') }}</a>
+                {% endif %}
