--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,14 +33,14 @@
           <ul class="navbar-nav mb-2 mb-lg-0">
             {% if current_user.is_anonymous %}
             <li class="nav-item">
-				<a class="nav-link" aria-current="page" href="{{ url_for('routes.login') }}">{{ _('Login') }}</a>
+				<a class="nav-link" aria-current="page" href="{{ url_for('auth.login') }}">{{ _('Login') }}</a>
             </li>
             {% else %}
             <li class="nav-item">
 				<a class="nav-link" aria-current="page" href="{{ url_for('routes.user', username=current_user.username) }}">{{ _('Profile') }}</a>
             </li>
             <li class="nav-item">
-				<a class="nav-link" aria-current="page" href="{{ url_for('routes.logout') }}">{{ _('Logout') }}</a>
+				<a class="nav-link" aria-current="page" href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a>
             </li>
             {% endif %}
           </ul>
