--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,16 @@
 				<a class="nav-link" aria-current="page" href="{{ url_for('routes.explore') }}">{{ _('Explore') }}</a>
             </li>
           </ul>
+		  <!-- Render search bar -->
+		  {% if g.search_form %}
+		  <form class="navbar-form navbar-left" method="get"
+				action="{{ url_for('routes.search') }}">
+			  <div class="form-group">
+						  {{ g.search_form.q(size=20, class='form-control',
+						  placeholder=g.search_form.q.label.text) }}
+			  </div>
+		  </form>
+		  {% endif %}
           <ul class="navbar-nav mb-2 mb-lg-0">
             {% if current_user.is_anonymous %}
             <li class="nav-item">
