--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -45,6 +45,15 @@
 						</form>
 					</p>
 				{% endif %}
+				<!-- Send private message link -->
+				{% if user != current_user %}
+				<p>
+					<a href="{{ url_for('routes.send_message',
+										recipient=user.username) }}">
+						{{ _('Send private message') }}
+					</a>
+				</p>
+				{% endif %}
 			</td>
 		</tr>
 	</table>
