--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,12 @@
 				<a class="nav-link" aria-current="page" href="{{ url_for('auth.login') }}">{{ _('Login') }}</a>
             </li>
             {% else %}
+			<li class="nav-item">
+				<a class="nav-link" aria-current="page"
+									href="{{ url_for('routes.messages') }}">
+					{{ _('Messages') }}
+				</a>
+			</li>
             <li class="nav-item">
 				<a class="nav-link" aria-current="page" href="{{ url_for('routes.user', username=current_user.username) }}">{{ _('Profile') }}</a>
             </li>
