--- a/app/templates/send_message.html
+++ b/app/templates/send_message.html
@@ -3,6 +3,6 @@
 {% import "bootstrap_wtf.html" as wtf %}
 
 {% block content %}
-	<h1>{{ _('Send Message to %(recipient)s', recipient=recipient }}</h1>
+	<h1>{{ _('Send Message to %(recipient)s', recipient=recipient) }}</h1>
 	{{ wtf.quick_form(form) }}
 {% endblock %}
