Added new message count badge

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,11 +51,10 @@
 									href="{{ url_for('routes.messages') }}">
 					{{ _('Messages') }}
 					{% set unread_message_count = current_user.unread_message_count() %}
-					{% if unread_message_count != 0 %}
-					<span class="badge text-bg-danger">
+					<span id="message_count" class="badge text-bg-danger"
+											 style="visibility: {% if unread_message_count != 0%}visible{% else %}hidden{% endif %};">
 						{{ unread_message_count }}
 					</span>
-					{% endif %}
 				</a>
 			</li>
             <li class="nav-item">
@@ -134,6 +133,12 @@
 			}
 		}
 		document.addEventListener('DOMContentLoaded', initialize_popovers);
+
+		// message count badge
+		function set_message_count(n) {
+			const count = document.getElementById('message_count');
+			count.innerText = n;
+			count.style.visibility = n ? 'visible' : 'hidden';
 	</script>
   </body>
 </html>
