--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -139,6 +139,25 @@
 			const count = document.getElementById('message_count');
 			count.innerText = n;
 			count.style.visibility = n ? 'visible' : 'hidden';
+		}
+
+		// Polling for notifications
+			
+    {% if current_user.is_authenticated %}
+    function initialize_notifications() {
+      let since = 0;
+      setInterval(async function() {
+        const response = await fetch('{{ url_for('routes.notifications') }}?since=' + since);
+        const notifications = await response.json();
+        for (let i = 0; i < notifications.length; i++) {
+          if (notifications[i].name == 'unread_message_count')
+            set_message_count(notifications[i].data);
+          since = notifications[i].timestamp;
+        }
+      }, 10000);
+    }
+    document.addEventListener('DOMContentLoaded', initialize_notifications);
+    {% endif %}
 	</script>
   </body>
 </html>
