--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -22,6 +22,14 @@
 							{{ _('Edit your profile') }}
 						</a>
 					</p>
+					<!-- export link -->
+					{% if not current_user.get_task_in_progress('export_posts') %}
+					<p>
+						<a href="{{ url_for('routes.export_posts') }}">
+							{{ _('Export your posts') }}
+						</a>
+					</p>
+					{% endif %}
 				{% elif not current_user.is_following(user) %}
 					<p>
 						<form action="{{ url_for(
