--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,6 +69,21 @@
       </div>
     </nav>
     <div class="container mt-3">
+	<!-- Flash current export process -->
+        {% if current_user.is_authenticated %}
+        {% with tasks = current_user.get_tasks_in_progress() %}
+        {% if tasks %}
+            {% for task in tasks %}
+            <div class="alert alert-success" role="alert">
+                {{ task.description }}
+                <span id="{{ task.id }}-progress">{{ task.get_progress() }}</span>%
+            </div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
+        {% endif %}
+
+	<!-- Flash messages -->
       {% with messages = get_flashed_messages() %}
       {% if messages %}
         {% for message in messages %}
@@ -76,7 +91,7 @@
         {% endfor %}
       {% endif %}
       {% endwith %}
-      {% block content %}{% endblock %}
+	  {% block content %}{% endblock %}
     </div>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -150,14 +165,29 @@
         const response = await fetch('{{ url_for('routes.notifications') }}?since=' + since);
         const notifications = await response.json();
         for (let i = 0; i < notifications.length; i++) {
-          if (notifications[i].name == 'unread_message_count')
-            set_message_count(notifications[i].data);
+			switch (notifications[i].name) {
+				case 'unread_message_count':
+		            set_message_count(notifications[i].data);
+					break;
+				case 'task_progress':
+					set_task_progress(notifications[i].data.task_id,
+						notifications[i].data.progress);
+					break;
+			}
           since = notifications[i].timestamp;
         }
       }, 10000);
     }
     document.addEventListener('DOMContentLoaded', initialize_notifications);
     {% endif %}
+
+	<!-- Helper function to dynamically update task progress -->
+	function set_task_progress(task_id, progress) {
+		const progressElement = document.getElementById(task_id + '-progress');
+		if (progressElement) {
+			progressElement.innerText = progress;
+		}
+	}
 	</script>
   </body>
 </html>
